# oapi2mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
openspec/changes/archive/2026-04-23-openapi2mcp-core/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-openapi2mcp-core/specs/mcp-server/: spec.md
openspec/changes/archive/2026-04-23-openapi2mcp-core/specs/spec-loading/: spec.md
openspec/changes/archive/2026-04-23-openapi2mcp-core/specs/tool-conversion/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/spec-loading/: spec.md
openspec/specs/tool-conversion/: spec.md
src/openapi2mcp/: cli.py  converter.py  models.py  parser.py  server.py
tests/: conftest.py  test_converter.py  test_parser.py  test_server.py
